DPC-203: Cleanup for PR