@@ -39,8 +39,8 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class EncryptingAggregationEngineTest {
     private static final String TEST_PROVIDER_ID = "1";
-    private static final String RSA_PRIVATE_KEY_PATH = "./test_rsa_private_key.der";
-    private static final String RSA_PUBLIC_KEY_PATH = "./test_rsa_public_key.der";
+    private static final String RSA_PRIVATE_KEY_PATH = "test_rsa_private_key.der";
+    private static final String RSA_PUBLIC_KEY_PATH = "test_rsa_public_key.der";
     private BlueButtonClient bbclient;
     private JobQueue queue;
     private EncryptingAggregationEngine engine;
@@ -55,31 +55,38 @@ class EncryptingAggregationEngineTest {
     }
 
     @BeforeEach
-    void setupEach() throws NoSuchAlgorithmException, IOException, InvalidKeySpecException {
+    void setupEach() throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
         queue = new MemoryQueue();
         bbclient = new MockBlueButtonClient();
         engine = new EncryptingAggregationEngine(bbclient, queue, config);
 
+        final InputStream testPrivateKeyResource = this.getClass().getClassLoader().getResourceAsStream(RSA_PRIVATE_KEY_PATH);
+        final InputStream testPublicKeyResource = this.getClass().getClassLoader().getResourceAsStream(RSA_PUBLIC_KEY_PATH);
 
-        // Ref: https://stackoverflow.com/questions/11410770/load-rsa-public-key-from-file
-        KeyFactory keyFactory  = KeyFactory.getInstance("RSA"); // Throws NoSuchAlgorithmException
+        if(testPrivateKeyResource == null) {
+            throw new MissingResourceException("Couldn't find test RSA private key", this.getClass().getName(), RSA_PRIVATE_KEY_PATH);
+        } else if(testPublicKeyResource == null)  {
+            throw new MissingResourceException("Couldn't find test RSA public key", this.getClass().getName(), RSA_PUBLIC_KEY_PATH);
+        }
 
-        Path privateKeyPath = Paths.get(getClass().getClassLoader().getResource(RSA_PRIVATE_KEY_PATH).getFile());
-        byte[] privateKeyRaw = Files.readAllBytes(privateKeyPath); // Throws IOException
+        byte[] privateKeyRaw = testPrivateKeyResource.readAllBytes();
+        byte[] publicKeyRaw = testPublicKeyResource.readAllBytes();
+
+
+        KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+
         PKCS8EncodedKeySpec privateKeySpec = new PKCS8EncodedKeySpec(privateKeyRaw);
-        rsaPrivateKey = (RSAPrivateKey) keyFactory.generatePrivate(privateKeySpec); // Throws InvalidKeySpecException
+        rsaPrivateKey = (RSAPrivateKey) keyFactory.generatePrivate(privateKeySpec);
 
-        Path publicKeyPath = Paths.get(getClass().getClassLoader().getResource(RSA_PUBLIC_KEY_PATH).getFile());
-        byte[] publicKeyRaw = Files.readAllBytes(publicKeyPath); // Throws IOException
         X509EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(publicKeyRaw);
-        rsaPublicKey = (RSAPublicKey) keyFactory.generatePublic(publicKeySpec); // Throws InvalidKeySpecException
+        rsaPublicKey = (RSAPublicKey) keyFactory.generatePublic(publicKeySpec);
     }
 
     /**
      * Test if the engine writes encrypted files to the Tmp filesystem
      */
     @Test
-    void shouldWriteEncryptedTmpFiles() throws Exception { // TODO (isears): do better
+    void shouldWriteEncryptedTmpFiles() throws GeneralSecurityException, IOException {
         // Make a simple job with one resource type
         final var jobId = UUID.randomUUID();
         JobModel job = new JobModel(jobId,
@@ -128,7 +135,17 @@ class EncryptingAggregationEngineTest {
         assertTrue(sig.verify(signature));
     }
 
-    private String decryptTmpFile(Path metadataPath, Path dataPath) throws Exception {  // TODO (isears): Do better
+    /**
+     * Utility method that uses the contents of the metadata to decrypt the data. This can be used as a working example
+     * of how to read data returned by the dpc-api as a vendor/user
+     *
+     * @param metadataPath - path to the *-metadata.json file
+     * @param dataPath - path to the encrypted data
+     * @return a {@link String} containing the decrypted data
+     * @throws GeneralSecurityException - Occurs whenever there's a problem initializing the cipher or decrypting data
+     * @throws IOException - Occurs when there's a problem reading the metadata/data files
+     */
+    private String decryptTmpFile(Path metadataPath, Path dataPath) throws GeneralSecurityException, IOException {
         byte[] metadataRaw = Files.readAllBytes(metadataPath);
         Map<String,Object> metadataActual = new ObjectMapper().readValue(metadataRaw, new TypeReference<Map<String,Object>>(){});
 
@@ -136,19 +153,18 @@ class EncryptingAggregationEngineTest {
         assertTrue(metadataActual.containsKey("SymmetricProperties"));
         assertTrue(metadataActual.containsKey("AsymmetricProperties"));
 
-
+        // Read json properties into local variables
         Map symmetricProperties =  (Map) metadataActual.get("SymmetricProperties");
         String symmetricCipher = (String) symmetricProperties.get("Cipher");
         byte[] encryptedSymmetricKey = Base64.getDecoder().decode((String) symmetricProperties.get("EncryptedKey"));
         byte[] symmetricIv = Base64.getDecoder().decode((String) symmetricProperties.get("InitializationVector"));
         int gcmTagLength = (int) symmetricProperties.get("TagLength");
-
         Map asymmetricProperties = (Map) metadataActual.get("AsymmetricProperties");
         String asymmetricCipher = (String) asymmetricProperties.get("Cipher");
+        byte[] asymmetricPublicKey = Base64.getDecoder().decode((String) asymmetricProperties.get("PublicKey"));
 
         // Make sure the same RSA public key is echoed back in the metadata
-        assertArrayEquals(Base64.getDecoder().decode((String) asymmetricProperties.get("PublicKey")), rsaPublicKey.getEncoded());
-
+        assertArrayEquals(asymmetricPublicKey, rsaPublicKey.getEncoded());
 
         // Initialize asymmetric cipher for decrypting the symmetric key
         Cipher rsaCipher = Cipher.getInstance(asymmetricCipher);
@@ -163,9 +179,11 @@ class EncryptingAggregationEngineTest {
                 new GCMParameterSpec(gcmTagLength, symmetricIv)
         );
 
-        try(final FileInputStream reader  = new FileInputStream(dataPath.toString())) {
-
-            CipherInputStream cipherReader = new CipherInputStream(reader, aesCipher);
+        // Configure a CipherInputStream with a properly initialized aesCipher to read the encrypted data
+        try(
+                final FileInputStream reader  = new FileInputStream(dataPath.toString());
+                final CipherInputStream cipherReader = new CipherInputStream(reader, aesCipher);
+        ) {
             return new String(cipherReader.readAllBytes(), StandardCharsets.UTF_8);
         }
     }
